# envirodata

./: .gitignore  Dockerfile  INSTALL.md  README.md  config.yaml  local_dev_config.yaml  more_configs.yaml  pgd_reader.sql  pyproject.toml
2.code/: API_ERA5_Land_2023Jan_Feb_2m_temp_dewtemp_windDS.py  geocoder.py  query_example.json  test.py
2.code/dwd/: config.yaml  dwd_downloading.ipynb  dwd_filtered_download.py  dwd_metadata.R  manager.py
2.code/dwd/input_methods/: era5.py
2.code/era_download/: down.sh  down_unit.py  readme.md
4.documents/Basics_Leaflet/Leaflet_basics/: Leaflet_basics.Rmd  Leaflet_basics.html
4.documents/Primer_on_Postgresql/: Primer_on_Postgresql.Rmd  Primer_on_Postgresql.html
4.documents/Variable_aggregation/: 3. Required_data_space.txt  4. Project_Envirodata_Environmentalvariables.xlsx  Aggregations_of_variables.md
deploy/: 00_setup_nomatim_docker.bash  01_setup_brightsky_api.bash  02_build_envirodata_docker.bash  03_run_loader_container.bash  04_start_server_container.bash
docs/: conf.py  index.rst
docs/Primer_on_Postgresql/: Primer_on_Postgresql.html
docs/Variable_aggregation/: Potential_aggregations _envir_var.pptx
literature/Variable_aggregation/: Compact_list.xlsx
services/AirBASE/: metadata.yaml
services/AirBASE/variables/: CO.yaml  HCHO.yaml  NH3.yaml  NO2.yaml  PM1.yaml  PM2_5.yaml
services/CAMS/: metadata.yaml
services/CAMS/variables/: no2_conc.yaml  o3_conc.yaml  pm2p5_conc.yaml
services/DWD/: metadata.yaml
services/DWD/variables/: sunshine.yaml  (+8 more)
services/Destatis/: metadata.yaml
services/Noise_mapping/: metadata.yaml
src/: bad_query.json  fuzzy_addition_funs.sql  geocoder.py  query_example.json  trim_hauskoordinaten.sh  trim_hauskoords.R
src/archive/: pgm.sql  postgis.sql
src/dwd/: dwd_metadata.R  input.py  output.py
src/envirodata/: environment.py  geocoder.py
src/era_download/: down.sh  down_unit.py
static/: main.js
templates/: _base.html  excel.html  footer.html  home.html  install.html  manual.html  metadata.html  result_table.html
test/: Test_1_pat.xlsx  Test_1_pat_good_columns.xlsx  example.xlsx
tools/: build_docs.bash  build_envirodata_docker.bash  docker.bash  run_loader_container.bash  setup_brightsky_api.bash  setup_nomatim_docker.bash  start_server_container.bash
tools/geocoding_server/: .gitignore  create_dbs.sql  create_postgres_server.bash  setup_fuzzy_matching.sql  setup_geocoder_db.sql  trim_hauskoordinaten.sh
tools/nomatim/: setup_docker.bash
variables/AirBASE/: O3.yaml  PM10.yaml  SO2.yaml
variables/Bevoelkerung/: Einwohner.yaml
variables/DWD/: pressure_msl.yaml  relative_humidity.yaml  wind_speed.yaml
variables/Durchschn_Nettokaltmiete/: DurchschnMieteQM.yaml
variables/Durchschnittsalter/: Durchschnittsalter.yaml
variables/Noise_mapping/: NOISE_NIGHT.yaml
(+20 files in other folders)
