[tool.poetry]
name = "envirodata"
version = "0.1.0"
description = "Service to associate points in time and space with environmental data"
authors = ["Christoph Knote <christoph.knote@med.uni-augsburg.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
run_server = "envirodata.scripts.run_server:main"
load_data = "envirodata.scripts.load_data:main"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cdsapi = "^0.6.1"
numpy = "^1.26.3"
SQLAlchemy = "^2.0.25"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
confuse = "^2.0.1"
wetterdienst = "^0.72.0"
netcdf4 = "^1.6.5"

[tool.poetry.group.dev.dependencies]
csvkit = "^1.3.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
enum-tools = "^0.11.0"
sphinx-toolbox = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

