[tool.poetry]
name = "envirodata"
version = "0.1.0"
description = "Service to associate points in time and space with environmental data"
authors = ["Christoph Knote <christoph.knote@med.uni-augsburg.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "envirodata", from = "src" },
]

[tool.poetry.scripts]
run_server = "envirodata.scripts.run_server:main"
load_data = "envirodata.scripts.load_data:main"


[tool.poetry.dependencies]
python = ">=3.9,<4"
cdsapi = "^0.7.2"
numpy = "^1.26.3"
SQLAlchemy = "^2.0.25"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
confuse = "^2.0.1"
netcdf4 = "^1.6.2"
rasterio = "^1.3.9"
pyproj = "^3.6.1"
orjson = "^3.7"
geopandas = "^0.14.4"
matplotlib = "^3.8.4"
requests = "^2.32.3"
pyarrow = "^17.0.0"
timezonefinder = "^6.5.3"
toml = "^0.10.2"
pandas = "^2.2.3"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
csvkit = "^1.3.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
enum-tools = "^0.11.0"
sphinx-toolbox = "^3.5.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

